<resources>
    <string name="app_name">Yelogy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="signup">Signup</string>
    <string name="dont_have_account">No account yet? Create one</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pin_code">Pin Code</string>

    <string name="enter_first_name">Please enter your first name</string>
    <string name="please_enter_lastname">Please enter last name.</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="valid_phone_number">Please enter valid phone number</string>
    <string name="enter_email_address">Please enter email address</string>
    <string name="enter_valid_email_address">Please enter valid email address</string>
    <string name="enter_loyalty_point">Please enter loyalty balance</string>
    <string name="password_same">Old password and new password cannot be same.</string>
    <string name="empty_password">Enter password</string>
    <string name="short_password">Password must be 6 character long</string>
    <string name="invalid_password">Password must contain atleast one alphabet and numeric character</string>
    <string name="empty_confirm_password">Confirm password</string>
    <string name="dont_match_password">Passwords don\'t match</string>
    <string name="enter_pin_code">Please enter your pin code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="notification_setting">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="my_wallet">My Wallet</string>
    <string name="delivery_address">My Delivery addresses</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="my_gift_card">my Gift Card</string>
    <string name="refer_and_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="register">Register</string>


    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="set_delivery_location">Select Your Location</string>
    <string name="use_this_location">SET MY LOCATION</string>
    <string name="delivery_address_">DELIVERY LOCATION</string>
    <string name="address">Address</string>

    <string name="address_search_hint">Search for your delivery location</string>
    <string name="enter_address_or_move_pin">Please enter your address or move pin</string>



    <!--location permission-->
    <string name="location_service_disabled_title">Location Service Disabled</string>
    <string name="location_service_disabled_text">Please enable location service</string>
    <string name="enable">Enable</string>
    <string name="location">Location</string>
    <string name="apko_kya_chaiye">Apko Kya Chahiye?</string>
    <string name="outlate_near_me">Outlate Nearby Me</string>
    <string name="order_assistant">Order Assistant</string>
    <string name="change">Change</string>
    <string name="at_your_door_step">At your door step</string>
    <string name="copyrights_reserved_with_yelogy_com">Copyrights reserved with Yelogy.com</string>
    <string name="shop_by_category">Shop By Category</string>


</resources>
