<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="viewModel"
            type="com.yelogy.login.LoginViewModel" />
    </data>


<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ImageView
            android:id="@+id/loginLogoIv"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:padding="@dimen/_10sdp"
            android:src="@mipmap/icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailAddressTextLayout"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:errorTextAppearance="@style/error_appearance"
            app:error="@{viewModel.mobile_error}"
            app:layout_constraintTop_toBottomOf="@+id/loginLogoIv">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailAddressEditText"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="50"
                android:text="@={viewModel.loginRequest.mobileNumber}"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextLayout"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:errorTextAppearance="@style/error_appearance"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressTextLayout"
            app:passwordToggleEnabled="true"
            app:error="@{viewModel.passowrd_error}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/LoginEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:text="@={viewModel.loginRequest.password}"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loginButton"
            style="@style/ButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login"
            app:backgroundTint="@color/colorPrimary"
            android:onClick="@{()-> viewModel.onLoginClick()}"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/forgotPasswordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_18sdp"
            android:text="@string/forgot_password_"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()-> viewModel.onForgotPasswordClick()}"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />



        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dontHaveAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />




    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>

</layout>