<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar_main2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/searchDeliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/home_search_icon"
            android:hint="@string/address_search_hint"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:gravity="center_vertical"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mMapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.v7.widget.AppCompatTextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:hint="@string/delivery_address_"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/_11sdp"
            android:layout_marginStart="@dimen/_11sdp"
            android:background="@color/violet_1" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/deliveryAddresstxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_8sdp"
            android:text="@string/address"
            android:textColor="@color/violet_3"
            android:textSize="@dimen/_12sdp" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/mapDoneButton"
            style="@style/ButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/use_this_location"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>